# PictureEditor

./: .gitignore  README.md
edgedetection/: Makefile  README.md  edgedetect
edgedetection/src/: gaussianblur.cpp  gaussianblur.h  grayscale.cpp  grayscale.h  main.cpp  mathutils.cpp  mathutils.h  saveimage.h  sobel.cpp  sobel.h
filtercolors/: Makefile  loadimage.cpp  main.cpp  saveimage.cpp  shiftcolor.cpp  shiftcolor.h
filtercolors/src/: Makefile  loadimage.cpp  loadimage.h  saveimage.cpp
movcontainerediting/: CMakeLists.txt  FINDINGS.md  README.md  main.cpp
movcontainerediting/src/: loadwritevideo.cpp  loadwritevideo.hpp
movcontainerediting/src/functions/: drawedges.cpp  drawedges.hpp  dummy.cpp  dummy.hpp  gaussianblur.cpp  gaussianblur.hpp  grayscale.cpp  grayscale.hpp  sobel.cpp  sobel.hpp
movcontainerediting/src/pointfunctions/: dbscan.cpp  dbscan.hpp  drawpoints.cpp  drawpoints.hpp  drawpointsdbscan.cpp  drawpointsdbscan.hpp
movcontainerediting/src/removebackground/: removebackground.cpp  removebackground.hpp
movcontainerediting/testmovs/: shortbook.MOV  shortroom.MOV
